--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "My little test bot for my discord server",
   "main": "src/js/index.js",
   "dependencies": {
+    "@types/colors": "^1.2.1",
     "@types/node": "^11.13.2",
+    "colors": "^1.3.3",
     "discord.js": "^11.4.2"
   },
   "devDependencies": {},
